--- a/Money-Bunny/src/app/app.component.html
+++ b/Money-Bunny/src/app/app.component.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="nav-item d-none d-sm-block">
-        <a class="btn mb-button mr-4" *ngIf="route.url.split('?')[0].slice(1) !== 'help'" routerLink="/help" [queryParams]="{page: this.route.url.slice(1)}">Help</a>
+        <a class="btn mb-button mr-4" *ngIf="route.url.split('?')[0].slice(1) !== 'help' && route.url.split('?')[0].slice(1) !== 'operator-menu'" routerLink="/help" [queryParams]="{page: this.route.url.slice(1)}">Help</a>
         <a class="btn mb-button mr-4" *ngIf="this.auth.isAccountSet()" routerLink="/logged-in-menu" (click)="this.auth.unsetCurrentAccount()">Back to accounts</a>
         <a class="btn mb-button mr-2" *ngIf="this.auth.isLoggedIn()" routerLink="/login" (click)="this.auth.SignOut()">Logout</a>
         <a class="btn mb-button mr-2" *ngIf="!this.auth.isLoggedIn()" routerLink="/login">Login / Sign up</a>
