--- a/Money-Bunny/src/app/operator-menu/operator-menu.component.html
+++ b/Money-Bunny/src/app/operator-menu/operator-menu.component.html
@@ -16,7 +16,7 @@
 			<div *ngIf="request['requestType'] === 'open'">
 				<div class="row">
 					<h4 class="font-weight-bold mb-form-field">Request sent on:&nbsp;</h4>
-					<h4 class="font-weight-bold">{{request['timestamp'].toDate()}}</h4>
+					<h4 class="font-weight-bold">{{request['timestamp']}}</h4>
 				</div>
 				<div class="row">
 					<h4 class="mb-form-field font-weight-bold">To:&nbsp;</h4>
