--- a/Money-Bunny/src/app/register/register.component.html
+++ b/Money-Bunny/src/app/register/register.component.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <button type="submit" class="btn mb-2 input-style mb-button w-50" [disabled]="newUser.name == '' || newUser.username == '' || newUser.password == '' || newUser.email == '' || newUser.cnp == '' || newUser.phone == '' || newUser.address == ''" (click)="signUp()">Sign up</button>
+            <button type="submit" class="btn mb-2 input-style mb-button w-50" [disabled]="newUser.name == '' || newUser.username == '' || newUser.password == '' || newUser.email == '' || newUser.cnp == '' || newUser.phone == '' || phone.errors?.pattern || cnp.errors?.pattern || password.errors?.pattern || username.errors?.pattern || email.errors?.pattern" (click)="signUp()">Sign up</button>
         </div>
     </form>
 </div>
