--- a/Money-Bunny/src/app/help/help.component.html
+++ b/Money-Bunny/src/app/help/help.component.html
@@ -8,10 +8,11 @@
 	        	<img class="logo" src="assets/images/main_circle.png" alt="Help Logo">
 	        </div>
 	        <br>
-	        You are currently on the home page, from here you can login, view your account balance, schedule online payments, secure online transations, open new accounts or the last option: block cards or close accounts.
+	        You are currently on the home page. From here you can login or sign up. After that you will be redirected to the user menu from where you can manage your accounts and enjoy all that MoneyBunny has to offer.
 	        <br>
 	        <br>
-	        An individual help page for each of these will appear as soon as you click on your preferred option.
+	        Individual help pages are provided for all the menus to help you navigate the site.
+			<br>
 			<br>
     	</div>
     </div>
@@ -26,11 +27,7 @@
 	        You are currently on the login page, from here you can login into your account.
 	        <br>
 	        <br>
-	        <div style="text-align: center;">
-	        	<img class="logo" src="assets/images/login_help1.png" alt="Login Logo">
-	        </div>
-	        <br>
-	        To do that you need to type your username in the box that is labeled "Username" and your password in the box that is labeled "Password".
+	        To do that you need to type the email you used to create your account and the account password.
 	        <br>
 	        <br>
 	   	    <div style="text-align: center;">
@@ -40,21 +37,11 @@
 	        <br>
 	        <br>
 	   	    <div style="text-align: center;">
-	        	<img class="logo" src="assets/images/login_help3.png" alt="Login Logo3">
-	        </div>
-	        If you want your credentials remembered for the next time you acces our website, you can opt to tick the option "Remember me", if not, just leave it unselected.
-	        <br>
-	        <br>
-	   	    <div style="text-align: center;">
-	        	<img class="logo" src="assets/images/login_help4.png" alt="Login Logo4">
-	        </div>
-	        If you do not remember your password, click "Forgot password?" and a special form with clear instructions will appear on your screen.
-	        <br>
-	        <br>
-	   	    <div style="text-align: center;">
 	        	<img class="logosmall" src="assets/images/login_help5.png" alt="Login Logo5">
 	        </div>
 	        If you do not have an account on our website yet, you can click the button "Sign up" and a form will appear.
+	        <br>
+	        <br>
     	</div>
     </div>
 </div>
@@ -63,20 +50,22 @@
     <div class="col">
     	<div class="textul">
     		<br>
-	        <h2>Welcome to the logged in help page section!</h2>
+	        <h2>Welcome to the user menu help page section!</h2>
 	        <br>
 	        <div style="text-align: center;">
-	        	<img class="logo" src="assets/images/lip.png" alt="Help Logo">
+	        	<img class="logofit" src="assets/images/lip.png" alt="Help Logo">
 	        </div>
 	        <br>
-	        If you click on "Select Registered Bank Account", a new page with its own help page will open, listing all of your registered bank accounts.
+	        If you click on "Select Registered Bank Account", a new page with its own help page will open, listing all of the Bank Accounts you added to our system.
 	        <br>
 	        <br>
-	        If you click on "Update Profile", a new page with its own help page will open, listing your profile details such as name, email or password.
+	        If you click on "Update Profile", a new page with its own help page will open, listing your profile details such as name, email or password. You can update you personal information here.
 	        <br>
 	        <br>
-	        If you click on "Open New Bank Account", a new page with its own help page will open, listing a group of banks and forms to choose and complete.
-    	</div>
+	        If you click on "Open New Bank Account", a new page with its own help page will open, providing a form for opening a new Bank Account with one of our Partner Banks.
+			<br>
+	        <br>
+	    </div>
     </div>
 </div>
 
@@ -155,11 +144,16 @@
     		<br>
 	        <h2>Welcome to the user profile help page section!</h2>
 	        <br>
-	        <div style="text-align: center;">
-	        	<img class="logobig" src="assets/images/up.png" alt="Help Logo">
-	        </div>
 	        <br>
-	        On this page you can modify your personal information, including Full Name, Email Address, Password, CNP and more. Make sure to complete the forms according to the default text instructions. After you write anything inside the form, the default background text will disappear.
+	        On this page you can modify all your personal information. The password can be changed by introducing the new password in the two fields beneath the username, the ones filled with dot characters. The password must be introduced in both to make sure that you did not misstype it.
+	        <br>
+	        <br>
+			If the new values do not respect the required format or if you insert a username that belongs to another user you will be notified.
+	        <br>
+	        <br>
+			Once you are done click Update and you will receive a success notification and be returned to the user menu.
+	        <br>
+	        <br>
     	</div>
     </div>
 </div>
@@ -170,11 +164,13 @@
     		<br>
 	        <h2>Welcome to the register help page section!</h2>
 	        <br>
-	        <div style="text-align: center;">
-	        	<img class="logobig" src="assets/images/up.png" alt="Help Logo">
-	        </div>
 	        <br>
-	        On this page you can register an account for our website for use with multiple bank accounts. Make sure to complete each form accordingly and your account will be activated in no time.
+	        On this page you can register an account for our website and use it to manage multiple bank accounts. Make sure to complete each form accordingly and your account will be activated in no time.
+	        <br>
+	        <br>
+			We request some personal information to make interacting with the bank easier for you. When you request to open or close a bank account you will only be asked to provide information about the account and all the presonal data required by the bank wil be provided by us based on the information in you user profile.
+			<br>
+	        <br>
     	</div>
     </div>
 </div>
@@ -189,8 +185,9 @@
 	        	<img class="logobig" src="assets/images/ad.png" alt="Help Logo">
 	        </div>
 	        <br>
-	        On this page you can view your account dashboard. This includes your current account Bank, IBAN, Account Type, your Balance and many other actions such as Transaction, Transaction Reports, Apply for Credit Card and Convert Currency.
-    	</div>
+	        On this page you can view your account dashboard. It offers a digest of your account details and cards for the operations you can do with this account. Selecting a card will redirect you to a menu dedicated to that operation.
+			<br><br>
+		</div>
     </div>
 </div>
 
@@ -200,18 +197,23 @@
     		<br>
 	        <h2>Welcome to the transaction help page section!</h2>
 	        <br>
-	        <div style="text-align: center;">
-	        	<img class="logobig" src="assets/images/t.png" alt="Help Logo">
-	        </div>
 	        <br>
 	        On this page you can perform a transaction.
 	        <br>
 	        <br>
-	        You must provide the Destination IBAN or choose from Frequent Accounts as well as the amount you wish to transfer. In addition to that the last step is to provide details for a Recurring Payment and an Invoice Number if it is an utility bill.
+	        You must provide the Destination IBAN as well as the amount you wish to transfer. The amount of money currently in your account is displayed on the page and you will be warned if you insert a larger sum.
 	        <br>
 	        <br>
-	        The last step is to click on "Complete Transaction".
-    	</div>
+			The IBANs of the accounts you have already interacted with will be saved and will appear in the Frequent Accounts drop-down menu.
+	        <br>
+	        <br>
+			You can also schedule recurring payments by introducing the number of days between each payment in the Recurring Payment field. If you are paying an utility bill, you can specify the Invoice Number.
+	        <br>
+	        <br>
+	        Once you are done, click on "Complete Transaction".
+			<br>
+	        <br>
+	    </div>
     </div>
 </div>
 
@@ -221,15 +223,17 @@
     		<br>
 	        <h2>Welcome to the transaction report help page section!</h2>
 	        <br>
-	        <div style="text-align: center;">
-	        	<img class="logobig" src="assets/images/tr.png" alt="Help Logo">
-	        </div>
 	        <br>
 	        On this page you can view your transactions and also download them as a .PDF file.
 	        <br>
 	        <br>
-	        You can choose if you wish Today, Last Week or Last Month's transactions. A table will prompt with Source, Destination, Amount and Date. To download as a .PDF file click on "Download as PDF".
-    	</div>
+	        You can choose if you wish Today, Last Week or Last Month's transactions. They will be displayed as a table specifying the Source, Destination, Amount and Date. To download as a .PDF file click on "Download as PDF".
+			<br>
+	        <br>
+			You can see if a payment is recurrent and how often it repeats and you can cancell the recurrency by clicking the red X next to it. If you do so the payment will not be repeated anymore, but it will still appear in your report.
+			<br>
+	        <br>
+	    </div>
     </div>
 </div>
 
@@ -243,13 +247,18 @@
 	        	<img class="logobig" src="assets/images/cc.png" alt="Help Logo">
 	        </div>
 	        <br>
-	        On this page you can convert from any currency into the required amount in euro.
+	        On this page you can convert from any currency into the currency of your account.
 	        <br>
 	        <br>
-	        Feel free to choose any currency from the Drop-Down Menu and then complete the field which reffers to the amount required.
+	        Insert the sum you want to obtain, slect the desired currency from the Drop-Down Menu and we will calculate how much money you would have to substract from your account.
 	        <br>
 	        <br>
-	        Last but not least, you can click "Insert this amount into a new transaction" to further use the conversion that was executed.
+	        The Converted Ammount field will show you how much your desired sum means in the currency of your account, as well as how much money you have in your account and the currecny of your account. Like so it is very easy to see if you could afford to pay the desired sum.
+			<br>
+	        <br>
+	        If you have enough money, you can click "Insert this amount into a new transaction" to use the conversion and send money to an account in a different currency.
+			<br>
+	        <br>
     	</div>
     </div>
 </div>
